--- a/css/pag3.css
+++ b/css/pag3.css
@@ -1,18 +1,15 @@
 * {
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
-}* {
-    margin: 0;
-    padding: 0;
     font-family: system-ui, -apple-system, Helvetica, arial, sans-serif;
+    font-size: small;
 }
 
 a {
     color: #fff;
     text-decoration: none;
     transition: 0.3;
-    padding: 20px;
+    padding: 10px;
 }
 
 a:hover {
