--- a/css/pag6.css
+++ b/css/pag6.css
@@ -2,13 +2,14 @@
     margin: 0;
     padding: 0;
     font-family: system-ui, -apple-system, Helvetica, arial, sans-serif;
+    font-size: small;
 }
 
 a {
     color: #fff;
     text-decoration: none;
     transition: 0.3;
-    padding: 20px;
+    padding: 10px;
 }
 
 a:hover {
