--- a/css/index.css
+++ b/css/index.css
@@ -4,6 +4,7 @@
 }
 #logo{
     border-radius: 100%;
-    width: 100px;
-    height: 100px;
+    width: 70px;
+    height: 70px;
+    margin-bottom: 10px;
 }
