--- a/css/pag1.css
+++ b/css/pag1.css
@@ -25,7 +25,12 @@
     color: #fff;
     margin-top: 30px;
     text-decoration: none;
+    
+    
 }
 #a{
     text-decoration: none;
+}
+#end{
+    margin-top: 20px;
 }
