--- a/css/loRe.css
+++ b/css/loRe.css
@@ -6,7 +6,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
+    min-height: 100vh;
 }
 
 .container {
@@ -14,7 +14,8 @@ body {
     border-radius: 8px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     padding: 20px;
-    width: 300px;
+    max-width: 300px;
+    width: 90%;
     text-align: center;
 }
 
@@ -44,21 +45,9 @@ input {
 }
 
 /* Estilo para o botão de cadastrar */
-input[type="submit"] {
-    background: rgb(33,37,41);
-    color: #fff;
-    font-weight: bold;
-    border: none;
-    cursor: pointer;
-    transition: background-color 0.3s;
-}
-
-input[type="submit"]:hover {
-    background: rgba(33,37,41,0.5);
-}
-
+input[type="submit"],
 input[type="button"] {
-    background: rgb(116, 119, 121);
+    background: rgb(33, 37, 41);
     color: #fff;
     font-weight: bold;
     border: none;
@@ -66,8 +55,9 @@ input[type="button"] {
     transition: background-color 0.3s;
 }
 
+input[type="submit"]:hover,
 input[type="button"]:hover {
-    background: rgba(116, 119, 121,0.5);
+    background: rgba(33, 37, 41, 0.5);
 }
 
 /* Estilos para o link de "Faça login" */
@@ -83,7 +73,8 @@ a {
 a:hover {
     text-decoration: underline;
 }
-#login{
+
+#login {
     background: red;
     width: 10px;
     height: 10px;
