--- a/css/loRe.css
+++ b/css/loRe.css
@@ -6,7 +6,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    min-height: 100vh;
+    min-height: 50vh;
 }
 
 .container {
@@ -14,8 +14,10 @@ body {
     border-radius: 8px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     padding: 20px;
-    max-width: 100%; /* Largura máxima de 100% para tela cheia */
+    width: 100%; /* Largura máxima */
+    max-width: 400px; /* Define a largura máxima para evitar que fique muito pequeno */
     text-align: center;
+    margin: 10px; /* Adicione alguma margem para afastar do lado da tela */
 }
 
 /* Estilos para o título e o formulário */
@@ -45,7 +47,7 @@ input {
 
 /* Estilo para o botão de cadastrar */
 input[type="submit"], input[type="button"] {
-    background: rgb(33, 37, 41);
+    background: rgb(33,37,41);
     color: #fff;
     font-weight: bold;
     border: none;
@@ -58,7 +60,7 @@ input[type="submit"], input[type="button"] {
 }
 
 input[type="submit"]:hover, input[type="button"]:hover {
-    background: rgba(33, 37, 41, 0.5);
+    background: rgba(33,37,41,0.5);
 }
 
 /* Estilos para o link de "Faça login" */
